fix spacing

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,15 +1,16 @@
 .App {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    min-height: 100%;
-    width: 100vwh;
+    min-height: 100vh;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 .Main {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     flex: 1 0 auto;
     width: 100%;
@@ -18,7 +19,6 @@
 
 .Header {
     width: 100%;
-    height: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
